--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
     <div id="app" data-v-app=""><div class="mcbbs_gray_background_vuejs_reset"></div>
 	<div id="bettersweet_main_container" class="container">
 	<div class="text">
-	<h1 style="color:#4caf50;font-weight:500;">纪念版正在维护中</h1>
-	<h2>因服务器系统及硬件设施更新，现处于维护状态中（预计北京时间2025年1月25日上午6:00左右恢复），旧贴存档仍可访问（archives.mcbbs.co）。MCBBS多人联机大区交流群 910431261</h2><hr><h2>请关注<a href="#">此页面</a>或<a href="https://mcbbs.rip/">晋级赛</a>获得最新的消息</h2>
+	<h1 style="color:#4caf50;font-weight:500;">此域名为纪念版备用域名</h1>
+	<h2>MCBBS多人联机大区交流群 910431261</h2><hr><h2>请关注<a href="#">此页面</a>获得最新的消息</h2>
 	<div align="center"><p>2024-2025© MCBBS Memorial Edition</div></div></div></div>
   </body></html>
